Clean some code